tests/spec/non_conformant/errors/extend/placeholder/missing.rs
//! Tests auto-converted from "sass-spec/spec/non_conformant/errors/extend/placeholder/missing.hrx"

// Ignoring "test", error tests are not supported yet.
